fixed header spacing on map page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -561,6 +561,9 @@ div.boba-times {
 
 
 
+.upcoming-boba-times-h1 {
+  margin-top: 20px;
+}
 
 
 button.cityButton, button.rsvpButton {
